human-intervention-logs/org.jboss:jboss-common-core:2.0.5.GA/gradle-test/gradle-test-2026-05-03T17-35-04-842199Z.log
Starting a Gradle Daemon, 11 busy and 4 incompatible and 134 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.jboss:jboss-common-core:2.0.5.GA
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/tests/src/org.jboss/jboss-common-core/2.0.5.GA/src/test/java/org_jboss/jboss_common_core/Jboss_common_coreTest.java:214: error: reference to breadthFirstSearch is ambiguous
        graph.breadthFirstSearch(start, (visitedGraph, vertex) -> breadthFirstNames.add(vertex.getName()));
             ^
  both method breadthFirstSearch(Vertex<T>,Visitor<T>) in Graph and method <E>breadthFirstSearch(Vertex<T>,VisitorEX<T,E>) in Graph match
  where T,E are type-variables:
    T extends Object declared in class Graph
    E extends Exception declared in method <E>breadthFirstSearch(Vertex<T>,VisitorEX<T,E>)
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/tests/src/org.jboss/jboss-common-core/2.0.5.GA/src/test/java/org_jboss/jboss_common_core/Jboss_common_coreTest.java:219: error: reference to depthFirstSearch is ambiguous
        graph.depthFirstSearch(start, (visitedGraph, vertex) -> depthFirstNames.add(vertex.getName()));
             ^
  both method depthFirstSearch(Vertex<T>,Visitor<T>) in Graph and method <E>depthFirstSearch(Vertex<T>,VisitorEX<T,E>) in Graph match
  where T,E are type-variables:
    T extends Object declared in class Graph
    E extends Exception declared in method <E>depthFirstSearch(Vertex<T>,VisitorEX<T,E>)
Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/tests/src/org.jboss/jboss-common-core/2.0.5.GA/src/test/java/org_jboss/jboss_common_core/Jboss_common_coreTest.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

FAILURE: Build failed with an exception.

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/tests/src/org.jboss/jboss-common-core/2.0.5.GA/build/reports/problems/problems-report.html

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/tests/src/org.jboss/jboss-common-core/2.0.5.GA/src/test/java/org_jboss/jboss_common_core/Jboss_common_coreTest.java:214: error: reference to breadthFirstSearch is ambiguous
          graph.breadthFirstSearch(start, (visitedGraph, vertex) -> breadthFirstNames.add(vertex.getName()));
               ^
    both method breadthFirstSearch(Vertex<T>,Visitor<T>) in Graph and method <E>breadthFirstSearch(Vertex<T>,VisitorEX<T,E>) in Graph match
    where T,E are type-variables:
      T extends Object declared in class Graph
      E extends Exception declared in method <E>breadthFirstSearch(Vertex<T>,VisitorEX<T,E>)
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/tests/src/org.jboss/jboss-common-core/2.0.5.GA/src/test/java/org_jboss/jboss_common_core/Jboss_common_coreTest.java:219: error: reference to depthFirstSearch is ambiguous
          graph.depthFirstSearch(start, (visitedGraph, vertex) -> depthFirstNames.add(vertex.getName()));
               ^
    both method depthFirstSearch(Vertex<T>,Visitor<T>) in Graph and method <E>depthFirstSearch(Vertex<T>,VisitorEX<T,E>) in Graph match
    where T,E are type-variables:
      T extends Object declared in class Graph
      E extends Exception declared in method <E>depthFirstSearch(Vertex<T>,VisitorEX<T,E>)
  Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/tests/src/org.jboss/jboss-common-core/2.0.5.GA/src/test/java/org_jboss/jboss_common_core/Jboss_common_coreTest.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2860-65dceee9/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.jboss:jboss-common-core:2.0.5.GA failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 17s
9 actionable tasks: 1 executed, 8 up-to-date
